--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,18 @@
 
     <string name="pref_file" translatable="false">preferences</string>
     <string name="pref_key_verified" translatable="false">verified</string>
+
+    <string-array name="command_list">
+        <item>All Logs</item>
+        <item>Bluetooth On</item>
+        <item>Bluetooth Off</item>
+        <item>Data On</item>
+        <item>Data Off</item>
+        <item>AirplaneMode On</item>
+        <item>AirplaneMode Off</item>
+        <item>Shutdown</item>
+        <item>Reboot</item>
+        <item>Enter Commands </item>
+
+    </string-array>
 </resources>
